[package]
name = "temporary_mail"
version = "0.1.0"
edition = "2021"
authors = ["Dilec Padovani <dilec.padovani@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
rand = "0.8.5"
reqwest = { version = "0.11.9", features = ["blocking","json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"


